Add bcrypt to dependencies

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/brogan20/cs546_s21_group3_final_proj#readme",
   "dependencies": {
-    "express-handlebars": "^5.3.1"
+    "bcrypt": "^5.0.1",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.1",
+    "mongodb": "^3.6.6",
+    "xss": "^1.0.8"
   }
 }
