--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.1",
+    "express-session": "^1.17.1",
     "mongodb": "^3.6.6",
     "xss": "^1.0.8"
   }
