--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Super Smash Bros Ultimate Tournament Profiles",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "seed": "node ./seed/seed.js"
   },
   "repository": {
     "type": "git",
